# drf-jwt-oauth2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
core/: settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/services/: google.py
